2008-06-02  Anders Carlsson  <andersca@apple.com>

        Reviewed by Mitz.

        Speculative fix for <rdar://problem/5661112> 
        CrashTracer: [USER] 49 crashes in DashboardClient at com.apple.WebCore: WebCore::RenderPart::setWidget + 62
        
        Defer loads while calling NPP_New. Some plug-ins start a run-loop inside NPP_New and finished loads could cause
        layouts to be triggered.
        
        * Plugins/WebBaseNetscapePluginView.mm:
        (-[WebBaseNetscapePluginView _createPlugin]):

2008-05-29  Justin Garcia  <justin.garcia@apple.com>

        Reviewed by Darin.
        
        <rdar://problem/5949462> REGRESSION: Can't paste screen captures into Mail
        
        AppKit started putting PNG instead of PICT onto the pasteboard for screen 
        captures.  Added support for PNG with kUTTypePNG.  Tiger doesn't support
        setting and retrieving pasteboard types with UTIs, but we don't know of any
        applications on Tiger that put only PNG on the pasteboard.

        * WebView/WebHTMLView.mm:
        (-[WebHTMLView _documentFragmentFromPasteboard:inContext:allowPlainText:]):
        (-[WebHTMLView _documentFragmentFromPasteboard:forType:inContext:subresources:]):

2008-05-29  Anders Carlsson  <andersca@apple.com>

        Reviewed by Brady.

        <rdar://problem/5970312> 
        icon file specified for stand alone web app causes crash if the icon can't be found
        
        Handle the case where iconData is null.
        
        * Misc/WebIconFetcher.mm:
        (WebIconFetcherClient::finishedFetchingIcon):

2008-05-29  Anders Carlsson  <andersca@apple.com>

        Reviewed by Mitz.

        <rdar://problem/5971845>
        https://bugs.webkit.org/show_bug.cgi?id=19313
        Add version member to NPCocoaEvent

        Initialize the version member to 0 for all events.
        
        * Plugins/WebNetscapePluginEventHandlerCocoa.mm:
        (initializeEvent):